# castaitakehome

./: Nikola_Rahman_CastAI_Take_Home_Assignment.ipynb  README.md  compare.py  eval.py  gpt_predict.py  predictions_baseline_few_shot.pickle  predictions_finetuned.pickle  predictions_openai_gpt35.pickle  pyproject.toml
data/: predictions_baseline_worse.pickle  predictions_baseline_zero_shot.pickle  predictions_openai_gpt4o.pickle  trainer_stats.pickle
